--- a/exam.html
+++ b/exam.html
@@ -145,8 +145,8 @@
       </div>
     
       <div class="btn-group d-flex justify-content-center gap-3 px-3 py-2 rounded-0">
-        <button id="prevBtn" class="rounded-circle"><i class="fa-solid fa-arrow-left"></i></button>
-        <button id="nextBtn" class="rounded-circle"><i class="fa-solid fa-arrow-right"></i></button>
+        <button id="prevBtn" class="rounded-2"><i class="fa-solid fa-arrow-left"></i></button>
+        <button id="nextBtn" class="rounded-2"><i class="fa-solid fa-arrow-right"></i></button>
       </div>
     </div>
     </div>
