--- a/exam.html
+++ b/exam.html
@@ -78,7 +78,7 @@
           </div>
 
           <button class="toggle-summary position-fixed top-50 end-0 translate-middle text-white border-0"><i
-              class="fa-solid fa-angles-left"></i></button>
+              class="fa-solid fa-angles-right"></i></button>
           <div class="summary">
             <div class="summary-content">
               <div class="level-title">Summary</div>
