--- a/exam.html
+++ b/exam.html
@@ -77,8 +77,11 @@
             </div>
           </div>
 
-          <button class="toggle-summary position-fixed top-50 end-0 translate-middle text-white border-0"><i
-              class="fa-solid fa-angles-right"></i></button>
+          <!-- Place this outside summary -->
+<button class="toggle-summary position-fixed top-50 end-0 translate-middle text-white border-0 z-3">
+  <i class="fa-solid fa-angles-left"></i>
+</button>
+
           <div class="summary">
             <div class="summary-content">
               <div class="level-title">Summary</div>
@@ -113,13 +116,6 @@
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
     </div>
     <div class="quiz-sec fixed-bottom">
       <div class="text-center">
